# palace-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MISSION.md  README.md  SECURITY.md  manifest.json  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
examples/: basic_usage.rs
scripts/: install.ps1  install.sh
src/: backend.rs  cli.rs  closet.rs  config.rs  convo_miner.rs  db.rs  dialect.rs  embedder.rs  entity_detector.rs  export.rs  gain.rs  hall_router.rs  hooks.rs  i18n.rs  install.rs  knowledge_graph.rs  layers.rs  lib.rs  llm.rs  main.rs  manifest_entities.rs  mcp_server.rs  migrate.rs  miner.rs  onboarding.rs  origin.rs  palace.rs  palace_graph.rs  preference.rs  query_intent.rs  query_rewriter.rs  query_sanitizer.rs  ranker.rs  remote.rs  reranker.rs  room_detector.rs  searcher.rs  split.rs  store.rs  sweep.rs  (+2 more)
src/backends/: sqlite.rs
tests/: client_rules.rs  coding_agent_eval.rs  gain.rs  hooks.rs  longmemeval_sample.rs  test_backend.rs  test_closet.rs  test_coding_agent_memory.rs  test_config.rs  test_entity_origin.rs  test_i18n.rs  test_install.rs  test_knowledge_graph.rs  test_mcp_server.rs  test_miner.rs  test_normalize.rs  test_query_intent.rs  test_ranker.rs  test_store.rs  test_tunnels.rs
tests/baselines/: longmemeval.json
