[package]
name = "palace-rs"
version = "0.11.0"
edition = "2021"
description = "Local memory palace for AI assistants — Rust edition"
license = "MIT"
repository = "https://github.com/AncientiCe/palace-rs"
homepage = "https://palacememory.com"
readme = "README.md"
rust-version = "1.82"
keywords = ["memory", "ai", "mcp", "llm", "embeddings"]
categories = ["database", "text-processing"]

[[bin]]
name = "palace"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "palace"
path = "src/lib.rs"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:tracing-subscriber"]

[dependencies]
# CLI (optional — only needed for the binary)
clap = { version = "4", features = ["derive"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml_edit = "0.22"

# Database — bundled SQLite, no system dep
rusqlite = { version = "0.32", features = ["bundled"] }

# Embeddings — ONNX Runtime, all-MiniLM-L6-v2, lazy init
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["ndarray", "std", "download-binaries", "tls-native"] }
ndarray = "0.17"
hf-hub = { version = "0.5", default-features = false, features = ["ureq", "native-tls"] }
unicode-normalization = "0.1"

# Error handling
anyhow = "1"
thiserror = "2"

# Gitignore-aware file walking (same engine as ripgrep)
ignore = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Hashing for deterministic IDs
blake3 = "1"

# Cross-platform config/data dirs (~/.palace)
directories = "5"

# Regex for general_extractor
regex = "1"

# Lazy static (for compiled regexes)
once_cell = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"], optional = true }

rayon = "1"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }

# HTTP client for remote MCP proxy mode (native-tls to match ort/hf-hub TLS stack)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }

[dev-dependencies]
tempfile = "3"
